Fix headshot alignment

--- a/dev/styles/partials/_bio.scss
+++ b/dev/styles/partials/_bio.scss
@@ -68,6 +68,10 @@
 .headshot {
     position: relative;
     left: 30px;
+
+    img {
+        display: block;
+    }
 }
 
 .bio-text {
